@@ -1,30 +1,27 @@
 package com.github._1c_syntax.mdclasses.metadata;
 
 import com.github._1c_syntax.mdclasses.metadata.additional.SupportVariant;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
+import lombok.extern.slf4j.Slf4j;
 
 import java.io.IOException;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.HashMap;
+import java.util.Map;
 
+@Slf4j
 public class SupportDataConfiguration {
 
+  private static final int POINT_COUNT_CONFIGURATION = 2;
+  private static final int SHIFT_CONFIGURATION_VERSION = 3;
+  private static final int SHIFT_CONFIGURATION_PRODUCER = 4;
+  private static final int SHIFT_CONFIGURATION_NAME = 5;
+  private static final int SHIFT_CONFIGURATION_COUNT_OBJECT = 6;
+  private static final int SHIFT_OBJECT_COUNT = 7;
+  private static final int COUNT_ELEMENT_OBJECT = 4;
   private HashMap<String, SupportVariant> supportMap = new HashMap<>();
   private Path pathToBinFile;
-
-  private final int POINT_COUNT_CONFIGURATION = 2;
-  private final int SHIFT_CONFIGURATION_VERSION = 3;
-  private final int SHIFT_CONFIGURATION_PRODUCER = 4;
-  private final int SHIFT_CONFIGURATION_NAME = 5;
-  private final int SHIFT_CONFIGURATION_COUNT_OBJECT = 6;
-  private final int SHIFT_OBJECT_COUNT = 7;
-  private final int COUNT_ELEMENT_OBJECT = 4;
-
-  private static final Logger LOGGER = LoggerFactory.getLogger(SupportDataConfiguration.class.getSimpleName());
 
   public SupportDataConfiguration(Path pathToBinFile) {
     this.pathToBinFile = pathToBinFile;
@@ -37,7 +34,7 @@ public class SupportDataConfiguration {
     String data = readBinFile(pathToBinFile);
     String[] dataStrings = data.split(",");
     int countConfiguration = Integer.parseInt(dataStrings[POINT_COUNT_CONFIGURATION]);
-    LOGGER.debug("Найдено конфигураций: " + countConfiguration);
+    LOGGER.debug("Найдено конфигураций: {}", countConfiguration);
 
     int startPoint = 3;
     for (int numberConfiguration = 1; numberConfiguration <= countConfiguration; numberConfiguration++) {
@@ -47,11 +44,11 @@ public class SupportDataConfiguration {
       int countObjectsConfiguration = Integer.parseInt(dataStrings[startPoint + SHIFT_CONFIGURATION_COUNT_OBJECT]);
 
       LOGGER.debug(String.format(
-          "Конфигурация: %s Версия: %s Поставщик: %s Количество обектов: %s",
-          configurationName,
-          configurationVersion,
-          configurationProducer,
-          countObjectsConfiguration));
+        "Конфигурация: %s Версия: %s Поставщик: %s Количество обектов: %s",
+        configurationName,
+        configurationVersion,
+        configurationProducer,
+        countObjectsConfiguration));
 
       int startObjectPoint = startPoint + SHIFT_OBJECT_COUNT;
       for (int numberObject = 0; numberObject < countObjectsConfiguration - 1; numberObject++) {
@@ -66,7 +63,7 @@ public class SupportDataConfiguration {
     }
   }
 
-  public HashMap<String, SupportVariant> getSupportMap() {
+  public Map<String, SupportVariant> getSupportMap() {
     return this.supportMap;
   }
 
@@ -87,7 +84,7 @@ public class SupportDataConfiguration {
   private String readBinFile(Path path) {
     String result = "";
     try {
-      result = new String(Files.readAllBytes(Paths.get(path.toUri())), StandardCharsets.UTF_8);
+      result = Files.readString(Paths.get(path.toUri()));
     } catch (IOException e) {
       LOGGER.error("Don't read bin file", e);
     }
